--- a/CacheManager.csproj
+++ b/CacheManager.csproj
@@ -24,26 +24,29 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DocumentationFile>bin\Debug\CacheManager.xml</DocumentationFile>
+        <DocumentationFile>bin\Debug\CacheManager.xml</DocumentationFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <DocumentationFile>bin\Release\CacheManager.xml</DocumentationFile>
+        <DocumentationFile>bin\Release\CacheManager.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="README.md" />
-      <None Remove="MHKarami97.snk" />
-      <None Remove="icon.jpg" />
-      <None Remove=".gitignore" />
+        <None Remove="README.md"/>
+        <None Remove="MHKarami97.snk"/>
+        <None Remove=".gitignore"/>
+        <None Update="icon.jpg">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dapper" Version="2.1.35" />
-      <PackageReference Include="Flurl.Http" Version="4.0.2" />
-      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
-      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
-      <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+        <PackageReference Include="Dapper" Version="2.1.35"/>
+        <PackageReference Include="Flurl.Http" Version="4.0.2"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2"/>
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
+        <PackageReference Include="StackExchange.Redis" Version="2.8.16"/>
     </ItemGroup>
 
 </Project>
