--- a/CacheManager.csproj
+++ b/CacheManager.csproj
@@ -39,14 +39,24 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
+        <None Remove="CacheManagerUnitTest\**" />
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AsyncKeyedLock" Version="7.1.3" />
         <PackageReference Include="Dapper" Version="2.1.35"/>
         <PackageReference Include="Flurl.Http" Version="4.0.2"/>
         <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2"/>
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
         <PackageReference Include="StackExchange.Redis" Version="2.8.16"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="CacheManagerUnitTest\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="CacheManagerUnitTest\**" />
     </ItemGroup>
 
 </Project>
