--- a/CacheManager.csproj
+++ b/CacheManager.csproj
@@ -7,10 +7,9 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CacheManager</Title>
         <Authors>MHKarami97</Authors>
-        <Description>CacheManager</Description>
+        <Description>Easy Cache Manager</Description>
         <Copyright>https://github.com/MHKarami97/CacheManager</Copyright>
         <PackageProjectUrl>https://github.com/MHKarami97/CacheManager</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/MHKarami97/CacheManager</PackageLicenseUrl>
         <PackageIcon>icon.jpg</PackageIcon>
         <RepositoryUrl>https://github.com/MHKarami97/CacheManager</RepositoryUrl>
         <RepositoryType>public</RepositoryType>
@@ -21,6 +20,10 @@
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>MHKarami97.snk</AssemblyOriginatorKeyFile>
         <PublicSign>true</PublicSign>
+        <PackageId>EasyMultiCacheManager</PackageId>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <ApplicationIcon>icon.ico</ApplicationIcon>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -32,23 +35,30 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Remove="README.md"/>
-        <None Remove="MHKarami97.snk"/>
-        <None Remove=".gitignore"/>
+        <None Remove="MHKarami97.snk" />
+        <None Remove=".gitignore" />
         <None Update="icon.jpg">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
+        </None>
+        <None Update="LICENSE.txt">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+        </None>
+        <None Update="README.md">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
         </None>
         <None Remove="CacheManagerUnitTest\**" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="AsyncKeyedLock" Version="7.1.3" />
-        <PackageReference Include="Dapper" Version="2.1.35"/>
-        <PackageReference Include="Flurl.Http" Version="4.0.2"/>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2"/>
-        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
-        <PackageReference Include="StackExchange.Redis" Version="2.8.16"/>
+        <PackageReference Include="Dapper" Version="2.1.35" />
+        <PackageReference Include="Flurl.Http" Version="4.0.2" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
+        <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     </ItemGroup>
 
     <ItemGroup>
@@ -57,6 +67,10 @@
 
     <ItemGroup>
       <EmbeddedResource Remove="CacheManagerUnitTest\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="icon.ico" />
     </ItemGroup>
 
 </Project>
