--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,9 +19,10 @@ jobs:
         options: >-
           --env ACCEPT_EULA=Y
           --env SA_PASSWORD=YourStrong!Passw0rd
-          --health-cmd="wait-for-it localhost:1433 --timeout=60 -- echo 'SQL Server is up'" 
+          --health-cmd="(/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrong!Passw0rd' -Q 'SELECT 1') || exit 1"
           --health-interval=10s
-          --health-retries=5
+          --health-timeout=5s
+          --health-retries=10 
       redis:
         image: redis:latest
         ports:
