--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
         options: >-
           --env ACCEPT_EULA=Y
           --env SA_PASSWORD=YourStrong!Passw0rd
-          --health-cmd="(/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrong!Passw0rd' -Q 'SELECT 1') || exit 1"
+          --health-cmd="/opt/mssql-tools/bin/sqlcmd -U sa -P YourStrong!Passw0rd -Q 'SELECT 1'"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=10 
