--- a/CacheManagerUnitTest/CacheManagerUnitTest.csproj
+++ b/CacheManagerUnitTest/CacheManagerUnitTest.csproj
@@ -5,7 +5,8 @@
         <LangVersion>12.0</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+        <AnalysisMode>All</AnalysisMode>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
