--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,3 +49,13 @@ jobs:
 
       - name: Run tests
         run: dotnet test --configuration Release --no-build
+
+      - name: Set up CodeQL
+        uses: github/codeql-action/setup@v3
+        with:
+          languages: 'csharp'
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: 'security'
