--- a/CacheManagerUnitTest/CacheManagerUnitTest.csproj
+++ b/CacheManagerUnitTest/CacheManagerUnitTest.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CacheManagerApi\CacheManagerApi.csproj" />
       <ProjectReference Include="..\CacheManager\CacheManager.csproj" />
       <ProjectReference Include="..\CacheManager.Database\CacheManager.Database.csproj" />
       <ProjectReference Include="..\CacheManager.Redis\CacheManager.Redis.csproj" />
