--- a/CacheManagerLoadTest/CacheManagerLoadTest.csproj
+++ b/CacheManagerLoadTest/CacheManagerLoadTest.csproj
@@ -26,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CacheManagerApi\CacheManagerApi.csproj" />
       <ProjectReference Include="..\CacheManager\CacheManager.csproj" />
       <ProjectReference Include="..\CacheManager.Database\CacheManager.Database.csproj" />
       <ProjectReference Include="..\CacheManager.Redis\CacheManager.Redis.csproj" />
