--- a/CacheManagerIntegrationTest/CacheManagerIntegrationTest.csproj
+++ b/CacheManagerIntegrationTest/CacheManagerIntegrationTest.csproj
@@ -27,6 +27,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CacheManagerApi\CacheManagerApi.csproj" />
+      <ProjectReference Include="..\CacheManagerClear.Kafka\CacheManagerClear.Kafka.csproj" />
+      <ProjectReference Include="..\CacheManagerClear.Rabbit\CacheManagerClear.Rabbit.csproj" />
+      <ProjectReference Include="..\CacheManagerClear.Redis\CacheManagerClear.Redis.csproj" />
+      <ProjectReference Include="..\CacheManagerClear\CacheManagerClear.csproj" />
       <ProjectReference Include="..\CacheManager\CacheManager.csproj" />
       <ProjectReference Include="..\CacheManager.Database\CacheManager.Database.csproj" />
       <ProjectReference Include="..\CacheManager.Redis\CacheManager.Redis.csproj" />
