--- a/CacheManagerClear/CacheManagerClear.csproj
+++ b/CacheManagerClear/CacheManagerClear.csproj
@@ -8,23 +8,23 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Title>CacheManager</Title>
+		<Title>CacheManagerClear</Title>
 		<Authors>MHKarami97</Authors>
-		<Description>Easy Cache Manager</Description>
+		<Description>Easy Cache Manager Clear</Description>
 		<Copyright>https://github.com/MHKarami97/CacheManager</Copyright>
 		<PackageProjectUrl>https://github.com/MHKarami97/CacheManager</PackageProjectUrl>
 		<PackageIcon>icon.jpg</PackageIcon>
 		<RepositoryUrl>https://github.com/MHKarami97/CacheManager</RepositoryUrl>
 		<RepositoryType>public</RepositoryType>
-		<PackageTags>CacheManager</PackageTags>
-		<PackageReleaseNotes>CacheManager</PackageReleaseNotes>
+		<PackageTags>CacheManagerClear</PackageTags>
+		<PackageReleaseNotes>CacheManagerClear</PackageReleaseNotes>
 		<AssemblyVersion>2.1.0</AssemblyVersion>
 		<FileVersion>2.1.0</FileVersion>
 		<Version>2.1.0</Version>
 		<SignAssembly>true</SignAssembly>
-		<AssemblyOriginatorKeyFile>MHKarami97.snk</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>..\CacheManager\MHKarami97.snk</AssemblyOriginatorKeyFile>
 		<PublicSign>true</PublicSign>
-		<PackageId>EasyMultiCacheManager</PackageId>
+		<PackageId>EasyMultiCacheManager.Clear</PackageId>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<ApplicationIcon>..\icon.ico</ApplicationIcon>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
@@ -33,19 +33,15 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-		<DocumentationFile>bin\Debug\CacheManager.xml</DocumentationFile>
+		<DocumentationFile>bin\Debug\CacheManagerClear.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-		<DocumentationFile>bin\Release\CacheManager.xml</DocumentationFile>
+		<DocumentationFile>bin\Release\CacheManagerClear.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Update="Resources.Designer.cs">
-			<DesignTime>True</DesignTime>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>Resources.resx</DependentUpon>
-		</Compile>
+		<ProjectReference Include="..\CacheManager\CacheManager.csproj"/>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -64,11 +60,6 @@
 			<PackagePath></PackagePath>
 			<Visible>True</Visible>
 		</None>
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AsyncKeyedLock" Version="7.1.3"/>
-		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
 	</ItemGroup>
 
 </Project>
