--- a/.editorConfig
+++ b/.editorConfig
@@ -1453,7 +1453,7 @@ dotnet_diagnostic.CA5405.severity = error
 dotnet_diagnostic.CA1801.severity = warning
 
 # Call GC.SuppressFinalize correctly
-dotnet_diagnostic.CA1816.severity = error
+dotnet_diagnostic.CA1816.severity = none
 
 # Rethrow to preserve stack details
 dotnet_diagnostic.CA2200.severity = error
